application/hello_nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-nginx
  labels:
    app: hello-nginx
    version: v1.0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-nginx
      version: v1.0
  template:
    metadata:
      labels:
        app: hello-nginx
        version: v1.0
    spec:
      containers:
      - name: hello-nginx
        image: nginx
        imagePullPolicy: IfNotPresent
        ports:
        - name: web
          containerPort: 80
          protocol: TCP
        # env:
        # - name: GREETER
        #   value: 'http://greeter:9080'
