application/hello_nginx/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-nginx
  labels:
    app: hello-nginx
    version: v1.0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-nginx
      version: v1.0
  template:
    metadata:
      labels:
        app: hello-nginx
        version: v1.0
    spec:
      containers:
      - name: hello-nginx
        image: nginx
        imagePullPolicy: IfNotPresent
        ports:
        - name: web
          containerPort: 80
          protocol: TCP
        # env:
        # - name: GREETER
        #   value: 'http://greeter:9080'

---

apiVersion: v1
kind: Service
metadata:
  name: hello-nginx
  labels:
    app: hello-nginx
spec:
  type: ClusterIP
  selector:
    app: hello-nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  sessionAffinity: None
