application/hello_nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-nginx
  labels:
    app: hello-nginx
spec:
  type: ClusterIP
  selector:
    app: hello-nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  sessionAffinity: None
