application/hello_nginx/ingress_1.1.1.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: hello-nginx
    # namespace: foo
  spec:
    ingressClassName: nginx
    rules:
      - host: www.hello-nginx.com
        http:
          paths:
            - pathType: Prefix
              path: /
              backend:
                service:
                  name: hello-nginx
                  port:
                    number: 80
